--- a/Titanic_Dados.ipynb
+++ b/Titanic_Dados.ipynb
@@ -523,7 +523,7 @@
         "mode_embarked = df['Embarked'].mode()\n",
         "df['Embarked'] = df['Embarked'].fillna(mode_embarked)\n",
         "print(df['Embarked'].head())\n",
-        "print(mode_embarked)"
+        "#print(mode_embarked)"
       ]
     },
     {
